--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,27 +6,7 @@
   </head>
   <body>
     <script src="/socket.io/socket.io.js"></script>
-
-    <form action="">
-      <!-- there is a button in this form -->
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-
-
-
-    <script>
-      var socket = io();
-      $('form').submit(function(){
-        socket.emit('chat message', $('#m').val());
-        $('#m').val('');
-        return false;
-      });
-      socket.on('chat message', function(msg){
-        $('#messages').append($('<li>').text(msg));
-      });
-    </script>
-
-
+    <script src="/js/script.js"></script>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
