navbar, get ready to redo index

--- a/views/lineGraph.ejs
+++ b/views/lineGraph.ejs
@@ -3,12 +3,11 @@
   <head>
     <% include partials/head %>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+  <% include partials/header %>
   <body>
     <div class="container">
       <h2>Emotions chart</h2>
-
       <div>
         <canvas id="emotionsLineChart"></canvas>
       </div>
@@ -22,7 +21,6 @@
           data: graphData
         });
       </script>
-
 
       </script>
     </div>
