--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,9 @@
-
 <meta charset="UTF-8">
-<title>Super Awesome</title>
+<title>Mindful</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel='stylesheet' href='/stylesheets/style.css' />
+<link href="flat-ui-dist/css/flat-ui.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
+<script src="flat-ui-dist/js/vendor/jquery.min.js"></script>
