--- a/views/radarGraph.ejs
+++ b/views/radarGraph.ejs
@@ -3,8 +3,9 @@
   <head>
     <% include partials/head %>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+  <% include partials/header %>
+
   <body>
     <div class="container">
       <h2>Emotions chart</h2>
