--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,9 +1,16 @@
-<meta charset="UTF-8">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mindful</title>
 
-<!-- CSS (load bootstrap from a CDN) -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel='stylesheet' href='/stylesheets/style.css' />
-<link href="flat-ui-dist/css/flat-ui.css" rel="stylesheet">
+<link href="lumino-dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="lumino-dist/css/datepicker3.css" rel="stylesheet">
+<link href="lumino-dist/css/styles.css" rel="stylesheet">
+<link href="css/styles.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
-<script src="flat-ui-dist/js/vendor/jquery.min.js"></script>
+<!--Icons-->
+<script src="lumino-dist/js/lumino.glyphs.js"></script>
+
+<!--[if lt IE 9]>
+<script src="js/html5shiv.js"></script>
+<script src="js/respond.min.js"></script>
+<![endif]-->
