--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,7 +9,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
 <!--Icons-->
 <script src="lumino-dist/js/lumino.glyphs.js"></script>
-
+<script src="/socket.io/socket.io.js"></script>
+<script src="js/script.js"></script>
 <!--[if lt IE 9]>
 <script src="js/html5shiv.js"></script>
 <script src="js/respond.min.js"></script>
