resolve socket and graph

--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -41,6 +41,7 @@
 					<div class="panel-body">
 						<div class="canvas-wrapper">
 							<% include radarGraph %>
+							FUCK ME
 						</div>
 					</div>
 				</div>
@@ -97,7 +98,7 @@
 			</div><!--/.row-->
 
 	</div>	<!--/.main-->
-
+	<script src="js/graph.js"></script>
 
 	<script src="lumino-dist/js/jquery-1.11.1.min.js"></script>
 	<script src="lumino-dist/js/bootstrap.min.js"></script>
