--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,14 +1,14 @@
-<meta charset="utf-8">
+n<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mindful</title>
 
 <link href="lumino-dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="lumino-dist/css/datepicker3.css" rel="stylesheet">
-<link href="lumino-dist/css/styles.css" rel="stylesheet">
-<link href="css/styles.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
 <!--Icons-->
 <script src="lumino-dist/js/lumino.glyphs.js"></script>
+<link href="css/styles.css" rel="stylesheet">
+<link href="lumino-dist/css/styles.css" rel="stylesheet">
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/script.js"></script>
 <!--[if lt IE 9]>
