--- a/views/partials/newNavs.ejs
+++ b/views/partials/newNavs.ejs
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><span>Mindful</a>
+      <a class="navbar-brand" href="#">Mindful</a>
       <ul class="user-menu">
         <li class="dropdown pull-right">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> User <span class="caret"></span></a>
@@ -30,7 +30,7 @@
     </div>
   </form>
   <ul class="nav menu">
-    <li><a href="/home"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Home</a></li>
+    <li class="active"><a href="/home"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Home</a></li>
     <!-- <li><a href="widgets.html"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Widgets</a></li> -->
     <li class="/home"><a href="charts.html"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Charts</a></li>
     <li><a href="/home"><svg class="glyph stroked table"><use xlink:href="#stroked-table"></use></svg> Tables</a></li>
