--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,6 +6,7 @@ n<meta charset="utf-8">
 <link href="lumino-dist/css/datepicker3.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
 <!--Icons-->
+<script src="lumino-dist/js/jquery-1.11.1.min.js"></script>
 <script src="lumino-dist/js/lumino.glyphs.js"></script>
 <link href="css/styles.css" rel="stylesheet">
 <link href="lumino-dist/css/styles.css" rel="stylesheet">
