--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,9 +38,9 @@
 		</div>
 
 		<div class="row">
-			<div class="col-lg-6">
+			<div class="col-lg-12">
 				<div class="panel panel-info">
-					<div class="panel-heading">Radar Graph</div>
+					<div class="panel-heading">Emotions Radar</div>
 					<div class="panel-body">
 						<div class="canvas-wrapper">
 							<div class="graph-container-right">
@@ -69,26 +69,8 @@
 				<div class="col-xs-6 col-md-2">
 					<div class="panel panel-default">
 						<div class="panel-body easypiechart-panel">
-							<h4>Joy</h4>
-							<div class="easypiechart" id="easypiechart-disgust" data-percent="0" ><span class="percent disgust-percent">0%</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-2">
-					<div class="panel panel-default">
-						<div class="panel-body easypiechart-panel">
 							<h4>Disgust</h4>
-							<div class="easypiechart" id="easypiechart-fear" data-percent="0" ><span class="percent fear-percent">0%</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-2">
-					<div class="panel panel-default">
-						<div class="panel-body easypiechart-panel">
-							<h4>Sadness</h4>
-							<div class="easypiechart" id="easypiechart-joy" data-percent="0" ><span class="percent joy-percent">0%</span>
+							<div class="easypiechart" id="easypiechart-disgust" data-percent="0"><span class="percent disgust-percent">0%</span>
 							</div>
 						</div>
 					</div>
@@ -97,7 +79,25 @@
 					<div class="panel panel-default">
 						<div class="panel-body easypiechart-panel">
 							<h4>Fear</h4>
-							<div class="easypiechart" id="easypiechart-sadness" data-percent="0" ><span class="percent sadness-percent">0%</span>
+							<div class="easypiechart" id="easypiechart-fear" data-percent="0"><span class="percent fear-percent">0%</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-6 col-md-2">
+					<div class="panel panel-default">
+						<div class="panel-body easypiechart-panel">
+							<h4>Joy</h4>
+							<div class="easypiechart" id="easypiechart-joy" data-percent="0"><span class="percent joy-percent">0%</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-6 col-md-2">
+					<div class="panel panel-default">
+						<div class="panel-body easypiechart-panel">
+							<h4>Sadness</h4>
+							<div class="easypiechart" id="easypiechart-sadness" data-percent="0"><span class="percent sadness-percent">0%</span>
 							</div>
 						</div>
 					</div>
