--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
 						<div class="panel-body easypiechart-panel">
 							<h4>Anger</h4>
 							<!-- need to change both data-percent and the hardcoded value with ejs syntax <%= %>  -->
-							<div class="easypiechart" id="easypiechart-anger" data-percent="0"><span class="percent angry-percent">0%</span>
+							<div class="easypiechart" id="easypiechart-anger" data-percent="0"><span class="percent anger-percent">0%</span>
 							</div>
 						</div>
 					</div>
